    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/20 richardjgowers, IAlibay, orbeckst, tylerjereddy, jbarnoud,
         yuxuanzhuang, lilyminium, VOD555, p-j-smith, bieniekmateusz,
         calcraven, ianmkenney, rcrehuet, manuel.nuno.melo

  * 1.0.1

Fixes
  * Development status changed from beta to mature (Issue #2773)
  * pip installation only requests Python 2.7-compatible packages (#2736)
  * Testsuite does not use any more matplotlib.use('agg') (#2191)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)
  * AtomGroup.center now works correctly for compounds + unwrapping
    (Issue #2984)
  * In ChainReader, read_frame does not trigger change of iterating position.
    (Issue #2723, PR #2815)
  * empty_atomgroup.select_atoms('name *') now returns an empty
    AtomGroup instead of TypeError (Issue #2765)
  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
  * rdf.InterRDF_s density keyword documented and now gives correct results for
    density=True; the keyword was available since 0.19.0 but with incorrect
    semantics and not documented and did not produce correct results (Issue
    #2811, PR #2812)
  * In hydrogenbonds.hbond_analysis.HydrogenbondAnalysis an AttributeError
    was thrown when finding D-H pairs via the topology if `hydrogens` was an
    empty AtomGroup (Issue #2848)
  * Fixed reading in masses and charges from a hoomdxml file
    (Issue #2888, PR #2889)
  * Fixed performance regression on select_atoms for string selections (#2751)
  * Fixed the DMSParser, allowing the creation of multiple segids sharing
    residues with identical resids (Issue #1387, PR #2872)